--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Gitの勉強</title>
 </head>
 <body>
-    <p>gh-pagesブランチはGitHub Pagesに公開されます。</p>
+   <h1>gh-pagesブランチはGitHub Pagesに公開されます。</h1>
+   <p>この変更はmainブランチに反映されます。</p>
 </body>
 </html>
